plugins {
	id 'java'
	id 'org.springframework.boot' version '3.2.3'
	id 'io.spring.dependency-management' version '1.1.4'
	id 'org.sonarqube' version '4.4.1.3373'
	id 'jacoco'
}

group = 'com.Gamehub'
version = '0.0.1-SNAPSHOT'

sonar {
	properties {
		property "sonar.java.coveragePlugin", "jacoco"
		property "sonar.coverage.jacoco.xmlReportPaths", "build/reports/jacoco/test/jacocoTestReport.xml"
		property "sonar.projectKey", "Gamehub"
		property "sonar.organization", "myOrganization"
		property "sonar.host.url", "http://localhost:9000"
		property "sonar.token", "sqp_bc2999b32985799b2f675786b7b077a74e6c6677"
		property "sonar.coverage.exclusions", "**/domain/**, **/configuration/**, **/dto/**, **/controller/**, **/BackendApplication.java, **/business/impl/CustomUserDetailsService.java, **/persistence/mapper/UserMapper.java, **/business/impl/FileStorageService.java"
		property "sonar.qualitygate.wait", true
		property "sonar.gradle.skipCompile", "true"
	}
}

jacocoTestReport {
	reports {
		xml.required.set(true)
	}
}

java {
	sourceCompatibility = '17'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven { url 'https://repo.spring.io/milestone' }
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.14.1'
	implementation 'org.mapstruct:mapstruct:1.4.2.Final'
	implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.0.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'mysql:mysql-connector-java:8.0.33'
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.4.2.Final'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.mockito:mockito-junit-jupiter:4.0.0'
	testImplementation 'org.mockito:mockito-core:4.0.0'
	testRuntimeOnly 'com.h2database:h2'
	runtimeOnly 'com.h2database:h2'
}

tasks.named('test') {
	useJUnitPlatform()
}

test {
	finalizedBy jacocoTestReport
}

tasks.named('sonar').configure {
	dependsOn compileJava, test
}
